--- a/src/components/FormComponents/DateInput.css
+++ b/src/components/FormComponents/DateInput.css
@@ -7,14 +7,22 @@
 .input-container {
   display: flex;
   align-items: center;
+  gap: 1rem;
 }
 
-.input-container select {
-  padding: 5px;
-  margin-right: 10px;
-}
+select {
+  font-size: 1rem;
+  height: 40px;
+  padding: 0 8px;
+  margin-bottom: 1rem;
+  width: 100%;
+  border: 1px solid #767676;
+  border-radius: 0px;
 
-.input-container input {
-  padding: 5px;
-  width: 80px;
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='%23919191' viewBox='0 0 12 12'%3E%3Cpath d='M6 9L1.5 4.5 2.91 3.09 6 6.17 9.09 3.09 10.5 4.5z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 1rem;
+  background-color: #3B3B3B;
 }
