--- a/src/style.css
+++ b/src/style.css
@@ -29,17 +29,16 @@ a:hover {
   color: #535bf2;
 }
 
+p {
+  margin: 0;
+}
+
 body {
   margin: 0;
   display: flex;
   min-width: 320px;
   min-height: 100vh;
   font-size: 1rem;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
 }
 
 @media (prefers-color-scheme: light) {
