--- a/src/components/CV/CV.css
+++ b/src/components/CV/CV.css
@@ -11,7 +11,7 @@ pre {
   font-family: inherit;
   font-size: 14px;
   text-wrap: wrap;
-  margin-top: 0.5rem;
+  margin-top: 0;
 }
 
 .cv-builder {
@@ -80,7 +80,6 @@ h3 {
   margin: 1rem 0 0.5rem;
   font-size: 1rem;
   font-weight: 400;
-  text-decoration: underline;
 }
 
 .dot {
