Update Experiences component

--- a/src/components/FormComponents/Button.css
+++ b/src/components/FormComponents/Button.css
@@ -19,3 +19,8 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+.edit-button,
+.add-button {
+  height: 40px;
+}
