--- a/src/components/CV/CV.css
+++ b/src/components/CV/CV.css
@@ -34,6 +34,12 @@ pre {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
 }
 
+.section-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .row {
   display: flex;
   flex: 100%;
@@ -98,6 +104,3 @@ h3 {
   font-weight: bold;
 }
 
-.edit-button {
-  height: 40px;
-}
