--- a/src/components/CV/CV.css
+++ b/src/components/CV/CV.css
@@ -18,13 +18,6 @@ pre {
   width: 960px;
 }
 
-.resume-preview {
-  background-color: #fff;
-  width: 816px;
-  height: 1056px;
-  margin: 0 auto;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
-}
 
 .section {
   margin-bottom: 2rem;
@@ -34,10 +27,24 @@ pre {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
 }
 
+form {
+  border-top: 1px solid rgb(108, 108, 108);
+  border-bottom: 1px solid rgb(108, 108, 108);
+  padding: 1.5rem 0;
+  margin-bottom: 2rem;
+}
+
+.personal-info-form {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
 .section-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .row {
@@ -53,8 +60,24 @@ pre {
 
 .button-container {
   display: flex;
-  justify-content: flex-end;
-  
+  justify-content: flex-end;  
+}
+
+.form-button-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.submit-button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.form-container-closed {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
 }
 
 
@@ -64,6 +87,10 @@ pre {
   padding: 2rem 2.5rem;
   color: #2e2e2e;
   margin-bottom: 2rem;
+  background-color: #fff;
+  width: 816px;
+  height: 1056px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
 }
 
 .resume-header {
@@ -72,9 +99,10 @@ pre {
 }
 
 .personal-info > div,
-.experience > div {
+.flex-container {
   display: flex;
 }
+
 
 .full-name {
   font-size: 2.5rem;
