--- a/src/components/Resume.css
+++ b/src/components/Resume.css
@@ -18,7 +18,6 @@ pre {
   width: 960px;
 }
 
-
 .section {
   margin-bottom: 2rem;
   border-radius: 4px;
@@ -81,7 +80,7 @@ form {
 }
 
 
-/* RESUME PREVIEW */
+/* Resume Preview */
 
 .resume-preview {
   padding: 2rem 2.5rem;
@@ -141,7 +140,6 @@ h3 {
   gap: 0.5rem;
 }
 
-
 /* Print */
 
 @media print {
@@ -154,7 +152,8 @@ h3 {
     visibility: visible;
   }
 
-  .edit-button {
+  .edit-button,
+  .print-button {
     visibility: hidden;
   }
 
