--- a/src/components/Resume.css
+++ b/src/components/Resume.css
@@ -23,7 +23,7 @@ pre {
   border-radius: 4px;
   padding: 1rem 2rem 2rem 2rem;
   background-color: #2e2e2e;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 form {
@@ -59,7 +59,7 @@ form {
 
 .button-container {
   display: flex;
-  justify-content: flex-end;  
+  justify-content: flex-end;
 }
 
 .form-button-container {
@@ -79,7 +79,6 @@ form {
   margin-bottom: 1rem;
 }
 
-
 /* Resume Preview */
 
 .resume-preview {
@@ -89,7 +88,7 @@ form {
   background-color: #fff;
   width: 816px;
   height: 1056px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .resume-header {
@@ -101,7 +100,6 @@ form {
 .flex-container {
   display: flex;
 }
-
 
 .full-name {
   font-size: 2.5rem;
