--- a/src/components/UI/DateInput.css
+++ b/src/components/UI/DateInput.css
@@ -24,5 +24,5 @@ select {
   background-repeat: no-repeat;
   background-position: right 10px center;
   background-size: 1rem;
-  background-color: #3B3B3B;
+  background-color: #3b3b3b;
 }
