--- a/src/components/UI/Input.css
+++ b/src/components/UI/Input.css
@@ -15,7 +15,7 @@ textarea {
   font-size: 1rem;
   border: 1px solid #767676;
   border-radius: 0px;
-  background-color: #3B3B3B;
+  background-color: #3b3b3b;
   font-family: inherit;
   resize: vertical;
 }
